schreinerei/schreinerei-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schreinerei-backend
  namespace: schreinerei
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: schreinerei-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schreinerei-backend
  template:
    metadata:
      labels:
        app: schreinerei-backend
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: schreinerei-backend
          image: ghcr.io/davidcode2/schreinerei-backend:0.1.53
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
