schreinerei/schreinerei-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schreinerei-backend-service
  namespace: schreinerei
spec:
  type: ClusterIP
  selector:
    app: schreinerei-backend
  ports:
    - name: http
      port: 80
      targetPort: 3000
