schreinerei/schreinerei-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schreinerei-frontend-service
  namespace: schreinerei
spec:
  type: ClusterIP
  selector:
    app: schreinerei-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
