schreinerei/schreinerei-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schreinerei-postgres-service
  namespace: schreinerei
spec:
  type: ClusterIP
  selector:
    app: schreinerei-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
