schreinerei/schreinerei-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schreinerei-ingress
  namespace: schreinerei
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "12m"
spec:
  ingressClassName: nginx
  rules:
    - host: "schreinerei.jakob-lingel.dev"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: schreinerei-backend-service
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: schreinerei-backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: schreinerei-frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - "schreinerei.jakob-lingel.dev"
      secretName: schreinerei-tls
